# GNN_MarketRegimeDetectionandEarlyWarning

./: .gitignore  README.md  Report.md  pyproject.toml
GNNProject/: __init__.py
GNNProject/thgnn/: __init__.py  config.py  run_real_data.py  train.py
GNNProject/thgnn/data/: __init__.py  dataset.py  real_data.py
GNNProject/thgnn/losses/: __init__.py  loss.py
GNNProject/thgnn/models/: __init__.py  expert_heads.py  relational_encoder.py  temporal_encoder.py  thgnn.py
GNNProject/thgnn/tests/: test_dataset_boundaries.py  test_e2e_step2.py  test_e2e_step3.py  test_import_namespace.py  test_smoke.py
GNNProject/thgnn/utils/: __init__.py
GNNsMarketRegimeDetection&Early-Warning/: run_real_data.py  train.py
GNNsMarketRegimeDetection&Early-Warning/data/: hetero_dataset.py  label_generator.py
GNNsMarketRegimeDetection&Early-Warning/models/: dynamic_regime_gnn.py
GNNsMarketRegimeDetection&Early-Warning/tests/: test_dataset_boundaries.py
market_regime_gnn/: __init__.py  _loader.py  config.py  run_real_data.py  train.py
market_regime_gnn/_legacy/: config.py  run_real_data.py  train.py
market_regime_gnn/data/: __init__.py  hetero_dataset.py  label_generator.py
market_regime_gnn/models/: __init__.py  dynamic_regime_gnn.py
tests/: test_cfg_defaults.py  test_cli_help.py  test_cli_validation_errors.py  test_curated_universe.py  test_dataset_snapshot_cache.py  test_device_resolution.py  test_import_fallback_guards.py  test_label_generator_smoke.py  test_market_regime_package.py  test_real_data_cache.py  test_runtime_arg_validation.py  test_split_date_ranges.py
(+3 files in other folders)
