[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gnn-market-regime-detection-and-early-warning"
version = "0.1.0"
description = "Research workspace for GNN-based market regime detection, early warning, and correlation forecasting."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy",
    "pandas",
    "torch",
    "torch-geometric",
    "yfinance",
]

[project.scripts]
market-regime-real-data = "market_regime_gnn.run_real_data:cli"
thgnn-real-data = "GNNProject.thgnn.run_real_data:cli"

[dependency-groups]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
include = ["market_regime_gnn*", "GNNProject*"]
exclude = [
    "GNNProject.thgnn.tests",
    "GNNProject.thgnn.tests.*",
]

[tool.pytest.ini_options]
# Pytest's capture plugin segfaults in this macOS/OneDrive workspace.
addopts = "-p no:capture"
